--- a/home/index-text.html
+++ b/home/index-text.html
@@ -13,11 +13,11 @@
 <div class='container'>
 
 <h1>Home</h1>
-<p>Sat  2 Apr 19:23:09 UTC 2016</p>
+<p>Sat  2 Apr 20:10:41 UTC 2016</p>
 
 <h2>Nest</h2>
-Protect: ok<br>
-Thermostat: off
+Protect: <br>
+Thermostat: 
 
 <h2>LIFX</h2>
 
@@ -28,12 +28,12 @@ Switch: true | Power: on | Brightness:1.0 <br>
 Switch: true | Power: off | Brightness:0.6 <br>
 
 <h3>BedRoom</h3>
-Switch: true | Power: on | Brightness:1.0 <br>
+Switch: false | Power: on | Brightness:1.0 <br>
 
 <h2>Chromecast</h2>
 <p>
 Chromecast:    <br>
-Chromecast Audio: 1 Google Play Music
+Chromecast Audio:  
 </p>
 
 </div>
