--- a/home/index.html
+++ b/home/index.html
@@ -14,10 +14,10 @@
 <div class='container'>
 
 <h1>Home</h1>
-<p>Sat  2 Apr 19:23:09 UTC 2016</p>
+<p>Sat  2 Apr 20:10:41 UTC 2016</p>
 <h2>Nest</h2>
-<div class='circle protect ok'></div>
-<div class='circle therm off'><span></span></div>
+<div class='circle protect '></div>
+<div class='circle therm '><span></span></div>
 
 <h2>LIFX</h2>
 
@@ -53,14 +53,14 @@ Bright:0.6 <br>
 </div>
 
 
-<div class='square state on true'>
+<div class='square state on false'>
 on
 </div>
 
-<div class='circle bulb true on' style='opacity:1.0'>
+<div class='circle bulb false on' style='opacity:1.0'>
 <span class='tt'>
 Room: Back<br>	
-Switch: true<br>
+Switch: false<br>
 Power: on<br> 
 Bright:1.0 <br>
 
@@ -80,8 +80,8 @@ Bright:1.0 <br>
     
 <br/>
 <div class='circle cc state'><span></span></div>
-Google Play Music<br/>
-<div class='circle cc state1'><span></span></div>
+<br/>
+<div class='circle cc state'><span></span></div>
 
 
 </div>
